# schema-induction

./: .gitignore  README.md  pyproject.toml  setup.py
json_schema/: class_type.py  list_type.py  primitive_type.py  schema.py  type.py  union_type.py
schema/: __init__.py  primitive_type.py  type.py  union_type.py
schema_induction/: class_type.py  list_type.py  primitive_type.py  schema.py  type.py
tests/: primitive_type_test.py  schema_test.py
