[tool.poetry]
name = "schema_induction"
version = "1.1.7"
description = "Auto generate schema from list of json objects"
authors = ["Binh Vu <binh@toan2.com>"]
homepage = "https://github.com/binh-vu/schema-induction"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
unicodecsv = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
